modif acceptation operation sur les if de la priorité

--- a/SYMFONY/templates/employe/admin/ajoutOperation.html.twig
+++ b/SYMFONY/templates/employe/admin/ajoutOperation.html.twig
@@ -1,45 +1,49 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Ajout d'opération{% endblock %}
+{% block title %}Ajout d'opération
+{% endblock %}
 
 {% block body %}
 
-{% include "base/nave.html.twig" %}
+	{% include "base/nave.html.twig" %}
 
-{% set titre = "Acceptation d'opération" %}
-{% include "base/blueBar.html.twig" %}
-{% include "base/flash.html.twig" %}
+	{% set titre = "Acceptation d'opération" %}
+	{% include "base/blueBar.html.twig" %}
+	{% include "base/flash.html.twig" %}
 
-    <div class="divTable">
-        <table class="tableListePersonnel">
-            {% for operation in operationList %}
-            <tr>
-                <td>
-                {% if operation.namePhoto %}
-                <img src="{{ asset('photoClient/' ~ operation.namePhoto)}}" alt="photo de l'opération n°{{operation.id}}" class="imgOperationList">
-                {% else %}
-                    <p>Pas de photo</p>
-                {% endif %}
-                
-                </td>
-            
-                <td>{{operation.dateForecast|date('d/m/Y')}}</td>
-                <td>
-                {% if operation.dateForecast > limitHight %}
-                <p class="priority hight">Élevée</p>
-                {% elseif operation.dateForecast > limitMedium and operation.dateForecast < limitHight %}
-                <p class="priority medium">Moyenne</p>
-                {% else %}
-                <p class="priority normal">Normal</p>   
-                {% endif %}
-                </td>
-                <td><a href="{{ path('details_operation', { id: operation.id })}}" class="btn btnBack btnModif">Détails</a>
-                </td>
-            </tr>
-                
-            {% endfor %}
-        </table>
-        <div class="pagination">
+	<div class="divTable">
+		<table class="tableListePersonnel">
+			{% for operation in operationList %}
+				<tr>
+					<td>
+						{% if operation.namePhoto %}
+							<img src="{{ asset('photoClient/' ~ operation.namePhoto)}}" alt="photo de l'opération n°{{operation.id}}" class="imgOperationList">
+						{% else %}
+							<p>Pas de photo</p>
+						{% endif %}
+
+					</td>
+
+					<td>{{operation.dateForecast|date('d/m/Y')}}</td>
+					<td>
+						{% if operation.dateForecast < limitHight %}
+							<p class="priority hight">Élevée</p>
+						{% elseif operation.dateForecast < limitMedium and operation.dateForecast > limitHight %}
+							<p class="priority medium">Moyenne</p>
+						{% elseif operation.dateForecast < today %}
+							<p class="priority hight"> <b>Dépassé</b></p>
+						{% else %}
+							<p class="priority normal">Normal</p>
+						{% endif %}
+					</td>
+					<td>
+						<a href="{{ path('details_operation', { id: operation.id })}}" class="btn btnBack btnModif">Détails</a>
+					</td>
+				</tr>
+
+			{% endfor %}
+		</table>
+		<div class="pagination">
 			{% if page > 1 %}
 				<a href="{{ path('add_operation_list', {page:page-1})}}" class="btn btnPagination">Page précédente</a>
 			{% endif %}
@@ -65,5 +69,5 @@
 
 
 		</div>
-    </div>
+	</div>
 {% endblock %}
