--- a/SYMFONY/templates/repertoire/index.html.twig
+++ b/SYMFONY/templates/repertoire/index.html.twig
@@ -49,8 +49,20 @@
                     <td>{{ operation.statut }}</td>
                     <td>{{ operation.dateForecast ? operation.dateForecast.format('d/m/Y') : 'N/A' }}</td>
                     <td>{{ operation.client.name }} {{ operation.client.firstname }}</td>
-                    <td>{{ operation.user.name }} {{ operation.user.firstname }}</td>
-                    <td>{{ operation.user.roles[0] }}</td>
+                    <td>
+                        {% if operation.user.name and operation.user.firstname %}
+                            {{ operation.user.name }} {{ operation.user.firstname }}
+                        {% else %}
+                            Pas de personnel rattaché
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if operation.user.roles[0] %}
+                            {{ operation.user.roles[0] }}
+                        {% else %}
+                            Aucun
+                        {% endif %}
+                    </td>
                     <td><a href="{{ path('generate_pdf' , { 'id': operation.id }) }}" target="_blank">Générer PDF</a></td>
                 </tr>
             {% endfor %}
