ajout ligne sur un formulaire de demande

--- a/SYMFONY/templates/client/demande.html.twig
+++ b/SYMFONY/templates/client/demande.html.twig
@@ -18,6 +18,8 @@
 		<a href="{{path('client')}}" class="btnBack btn">Retour</a>
 		{{form_start(form)}}
 		<div>
+		<p class="titleForm">Vos coordonées :
+			</p>
 			<div class="doubleChamp">
 				{{ form_row(form.client.name, {'attr':{'placeholder':"Doe"}})}}
 				{{ form_row(form.client.firstname, {'attr':{'placeholder':"John"}})}}
