--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -11,10 +11,11 @@
 
 		<div class="navbar-item">
 
-
+<h1>{{ 'welcome'|trans }}</h1>
+<p>{{ 'goodbye'|trans }}</p>
 			<div class="nav-item">
 				<a class="nav-link" href={{ path("client") }}>
-					<img src="{{ asset('image/image_devis.png') }}" alt={% trans %}"Devis"{% endtrans %}>
+					<img src="{{ asset('image/image_devis.png') }}" alt="Devis">
 					<p>Devis</p>
 				</a>
 			</div>
