--- a/SYMFONY/templates/employe/operation.html.twig
+++ b/SYMFONY/templates/employe/operation.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block javascripts %}
-    <script src="{{ asset('./../assets/operation.js') }}"></script>
+    <script src="{{ asset('./../assets/boutonPrendre.js') }}"></script>
     {% block importmap %}
         {{ importmap('app') }}
     {% endblock %}
