--- a/SYMFONY/templates/email/contact.html.twig
+++ b/SYMFONY/templates/email/contact.html.twig
@@ -19,7 +19,7 @@
             </div>
 
             <div class="form-group2">
-                {{ form_row(form.content, {'attr': {'class': 'form-control'}}) }}
+                {{ form_row(form.content, {'attr': {'class': 'form-control', 'placeholder':'Votre demande ...'}}) }}
             </div>
             {{ form_end(form) }}
         </form>
