--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -285,11 +285,52 @@ body {
 .navE-links li a, .navL-links li a {
 
   text-decoration: none;
-  color: #fff;
+  color: #ffffff;
   font-weight: bold;
   font-family: bold italic;
   font-size: 20px;
 }
+
+.containerOp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.contourOp {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.counter {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.custom-block {
+  margin-bottom: 20px;
+}
+
+.flash-error {
+  background-color: #f44336;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.custom-block {
+  display: flex;
+  
+  margin-bottom: 20px;
+}
+
+
 
 
 
