Page operation terminée

--- a/SYMFONY/templates/employe/operation.html.twig
+++ b/SYMFONY/templates/employe/operation.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/operation.css') }}">
@@ -44,4 +44,5 @@
             {% endfor %}
         </div>
     </div>
+    <script src="{{ asset('../assets/boutonPrendre.js') }}"></script>
 {% endblock %}
