--- a/SYMFONY/templates/pdf/pdf_template.html.twig
+++ b/SYMFONY/templates/pdf/pdf_template.html.twig
@@ -1,10 +1,54 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+            Facture pour {{operation.client.name}} {{operation.client.firstname}}
+		</title>
+
+    <link rel="stylesheet" href="./../../assets/styles/app.css">
+		{# {% block javascripts %}
+			{% block importmap %}
+				{{ importmap('app') }}
+			{% endblock %}
+		{% endblock %} #}
+	</head>
+	<body>
+            
+        <h1>CleanThis</h1>
+
+        {% set titre = "Facture pour " ~ operation.client.name ~ " " ~ operation.client.firstname %}
+        {% include "base/blueBar.html.twig" %}
+
+            <p><b>Adresse</b> : {{operation.adresse.number }} {{operation.adresse.street}} {{operation.adresse.city}} {{operation.adresse.county}} {{operation.adresse.country}}</p>
+            <p><b>Date de réalisation souhaité</b> : {{operation.dateForecast|date('d/m/Y')}}</p>
+            <p><b>Date de réalisation</b> : {{operation.dateStart ? operation.dateStart|date('d/m/Y') : "Pas encore réalisé"}}</p>
+            <p><b>Date de fin de l'opération</b> : {{operation.dateEnd ? operation.dateEnd|date('d/m/Y') : "Pas encore terminé"}}</p>
+
+        <table>
+            <caption>
+                Récapitulatif de l'opération
+            </caption>
+            <tr>
+                <th>Client</th>
+                <th>Description de l'opération</th>
+                <th>Type d'opération</th>
+                <th>Prix</th>
+            </tr>
+            <tr>
+                <td>{{operation.client.name}} {{operation.client.firstname}}</td>
+                <td>{{operation.description}}</td>
+                <td>{{operation.type.name}}</td>
+                <td>{{operation.type.prix}}</td>
+            </tr>
+        </table>
+        <p>Employé en charge de l'opération : {{operation.user ? operation.user.name : "Pas encore attribué"}} {{operation.user ? operation.user.firstname : ""}}</p>
+        <pre>
+            {{ dump(operation) }}
+        </pre>
+
+    </body>
 
 
-{% block title %}RAPPORT{% endblock %}
-<pre>
-    {{ dump(operation) }}
-</pre>
+</html>
 
-{% block body %}
-
-{% endblock %}
