--- a/SYMFONY/templates/stat/index.html.twig
+++ b/SYMFONY/templates/stat/index.html.twig
@@ -18,25 +18,20 @@
 
    <div class="operation-table">
                 <h2>Chiffre d'Affaires 2024</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Type</th>
-                            <th>Nombre d'opérations</th>
-                        </tr>
-                    </thead>
+                <table class="tableStat">
+                 
                     <tbody>
                         <tr>
-                            <td>Grosse</td>
-                            <td>{{ countGrosse }}</td>
+                            <td>Petite</td>
+                            <td>{{ countPetite }}</td>
                         </tr>
                         <tr>
                             <td>Moyenne</td>
                             <td>{{ countMoyenne }}</td>
                         </tr>
                         <tr>
-                            <td>Petite</td>
-                            <td>{{ countPetite }}</td>
+                            <td>Grosse</td>
+                            <td>{{ countGrosse }}</td>
                         </tr>
                         
                         <tr>
@@ -48,7 +43,7 @@
                             <td>{{ totalCount }}</td>
                         </tr>
                         <tr>
-                            <td>Chiffre</td>
+                            <td>Chiffre total en cours</td>
                             <td>{{ totalPrix }}</td>
                         </tr>
                      
