--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -368,11 +368,11 @@ body {
   margin-right: auto;
   margin-left: auto;
   height: 121px;
-  width: 1596px;
+  width: 100%;
   display: flex;
   align-items: center;
   border-radius: 1cqmax;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .navE-links,
@@ -386,7 +386,7 @@ body {
 .navE-links li,
 .navL-links li {
   padding: 10px 20px;
-  margin-right: 35px;
+  margin-right: 0;
 }
 .navE-links li a,
 .navL-links li a {
@@ -899,7 +899,7 @@ width: 20px;
 .custom-block2 {
   margin: 0 auto;
   display: flex;
-  width: 1596px;
+  width: 100%;
   height: 100px;
   justify-content: space-around;
   align-items: center;
