--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -364,11 +364,10 @@ body {
 /* Operation */
 .navbarE {
   background-color: #77b800;
-
   margin-right: auto;
   margin-left: auto;
   height: 121px;
-  width: 1596px;
+  width: 100%;
   display: flex;
   align-items: center;
   border-radius: 1cqmax;
@@ -1263,4 +1262,15 @@ list-style-type: none;
       width: 33%;
     }
   }
-  
+/* Contact */
+  .formulaire-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  /* Register */
+  .registFor{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
