--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -18,12 +18,14 @@
 					<p>Devis</p>
 				</a>
 			</div>
+			{% if app.user %}
 			<div class="nav-item">
 				<a class="nav-link" href={{ path("app_operation") }}>
 					<img src="{{ asset('image/image_operations.png') }}" alt="Opérations">
 					<p>Opérations</p>
 				</a>
 			</div>
+			{% endif %}
 			<div class="nav-item">
 				<a class="nav-link" href={{ path("app_contact") }}>
 					<img src="{{ asset('image/image_aide.png') }}" alt="Aide">
