--- a/SYMFONY/templates/home/home.html.twig
+++ b/SYMFONY/templates/home/home.html.twig
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="bg-coverAll" style="background-image: url('{{ asset('image/body.png') }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-		>
+		
 
 		<div class="valeur">
 			<h1>Pourquoi CleanThis ?</h1>
@@ -40,7 +40,7 @@
 				<h4 class="titre-para1">Expertise et excellence
 				</h4>
 				<p>
-					un résultat impeccable à chaque intervention</p>
+					n résultat impeccable à chaque intervention</p>
 			</div>
 
 			<div class="para-why">
@@ -48,7 +48,7 @@
 				<h4 class="titre-para1">Gain de temps précieux
 				</h4>
 				<p>
-					libérez du temps pour vous concentrer sur l'essentiel</p>
+					Libérez du temps pour vous concentrer sur l'essentiel</p>
 			</div>
 
 			<div class="para-why">
@@ -56,7 +56,7 @@
 				<h4 class="titre-para1">Services sur mesure
 				</h4>
 				<p>
-					des solutions personnalisées, adaptées à vos exigences</p>
+					Des solutions personnalisées, adaptées à vos exigences</p>
 			</div>
 
 			<div class="para-why">
@@ -64,7 +64,7 @@
 				<h4 class="titre-para1">Économie intelligente
 				</h4>
 				<p>
-					un choix économiquement judicieux.</p>
+					Un choix économiquement judicieux.</p>
 			</div>
 
 
@@ -120,7 +120,9 @@
 			  nous mettons tout en œuvre pour contribuer à un avenir plus vert et plus sain. Ensemble, avec détermination et solidarité, nous pouvons bâtir un monde où la propreté 
 			  et la durabilité vont de pair.
 		</p>
+		<div>
 		<img class="devDurable" src="{{ asset('image/devDurable.png') }}" alt="Image de fond montrant des services de nettoyage">
+		</div>
 	</div>
 
 	<div class="eco-image">
@@ -160,9 +162,11 @@
 			<p>Les prestations de mon intervenant sont de grande qualité et la société toujours très réactive et disponible. 
 					   Merci pour la qualité qui est à la hauteur du coût du service rendu.</p>
 		</div>
-
+		
+		<div class="notation">
 		<img class="note-avis" src="{{ asset('image/noteAvis.png') }}" alt="">
-
+		</div>
+		
 
 	</div>
 
