--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -11,7 +11,7 @@
 		<div class="navbar-item">
 			<div class="nav-item">
 				<a class="nav-link" href={{ path("home") }}>
-					<img src="{{ asset('image/Group.png') }}" alt="Accueil">
+					<img src="{{ asset('image/note-avis.png') }}" alt="Accueil">
 					<p>Acceuil</p>
 				</a>
 			</div>
