ajout grandeur minimal sur certaine page pour que le footer soit en bas tout le temp

--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -1228,9 +1228,11 @@ list-style-type: none;
   display: flex ;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh; /* 100% de la hauteur de la vue */
 }
+.min-height100{
+  min-height: 100vh; /* 100% de la hauteur de la vue */
 
+}
 /* Styles pour le menu burger */
 .burger-menu {
     display: none; /* Caché par défaut */
