--- a/SYMFONY/templates/client/client.html.twig
+++ b/SYMFONY/templates/client/client.html.twig
@@ -5,7 +5,7 @@
     {% set titre = "Êtes-vous déjà client chez nous ?" %}
 	{% include "base/blueBar.html.twig" %}
     {% include "base/flash.html.twig" %}
-    <div class="formClient">
+    <div class="formClient min-height100">
         {{form_start(form)}}
         
         {{form_label(form.client)}}
