--- a/SYMFONY/templates/employe/admin/ajoutOperation.html.twig
+++ b/SYMFONY/templates/employe/admin/ajoutOperation.html.twig
@@ -11,7 +11,7 @@
 	{% include "base/blueBar.html.twig" %}
 	{% include "base/flash.html.twig" %}
 
-	<div class="divTable">
+	<div class="divTable min-height100">
 		<table class="tableListePersonnel">
 			{% for operation in operationList %}
 				<tr>
