--- a/SYMFONY/templates/employe/admin/listePersonnel.html.twig
+++ b/SYMFONY/templates/employe/admin/listePersonnel.html.twig
@@ -8,7 +8,7 @@
 
 	{% include "base/flash.html.twig" %}
 
-	<div class="divTable">
+	<div class="divTable min-height100">
 		<table class="tableListePersonnel">
 			<thead>
 				<tr>
