--- a/SYMFONY/templates/stat/index.html.twig
+++ b/SYMFONY/templates/stat/index.html.twig
@@ -16,7 +16,7 @@
 {% include "base/nave.html.twig" %}
 
 
-   <div class="operation-table">
+   <div class="operation-table min-height100">
                 <h2>Chiffre d'Affaires 2024</h2>
                 <table class="tableStat">
                  
